--- a/test/src/App.css
+++ b/test/src/App.css
@@ -1,5 +1,5 @@
 .home {
-  background: grey;
+  background: white;
   height: 100vh;
   width: 100%;
 }
@@ -27,9 +27,6 @@
   font-size: 12px;
   color: red;
 }
-
-
-
 
 
 .App {
