enter키 로그인, 이미지 생성 중 로딩 표시, container크기 조정, 전체 배경색 및 글자색 변경

--- a/test/src/App.css
+++ b/test/src/App.css
@@ -1,5 +1,5 @@
 .home {
-  background: white;
+  background: #343a40;;
   height: 100vh;
   width: 100%;
 }
@@ -33,7 +33,7 @@
   width: 30px;
   border: 7px solid;
   border-radius: 50%;
-  border-color: white black black black;
+  border-color: red black black black;
   animation: rotate 1.5s linear infinite;
   position: absolute; /* 포지셔닝을 절대 위치로 설정 */
   top: 50%; /* 부모 요소 상단 기준으로 50%에 위치하도록 설정 */
