--- a/test/src/Navbar2.css
+++ b/test/src/Navbar2.css
@@ -5,6 +5,7 @@ ul {
 }
 
 .link {
+    font-size: 20px;
     color: #fff;
     padding: 0.5rem;
     position: relative;
@@ -28,6 +29,7 @@ ul {
 }
 
 .logo {
+    font-size: 20px;
     color: #fff;
     transition: 0.35s ease;
 }
